--- a/chess.html
+++ b/chess.html
@@ -219,7 +219,7 @@
 					for (let col in grid) {
 						const piece = grid[row][col]
 						if (piece == ' ' || piece.color === this.color) continue
-						if (piece.get_moves(depth + 1).find(xy => xy[0] === this.x && xy[1] === this.y)) threats.push(piece)
+						if (piece.get_moves(depth).find(xy => xy[0] === this.x && xy[1] === this.y)) threats.push(piece)
 					}
 				}
 				return threats
@@ -336,9 +336,8 @@
 				let safe_moves = []
 				for (let move of moves) {
 					if (board.xy2p(move).char === "K") {
-						const foo = [...board.log]; let i = 1; let j = 0; let s = ''; while (foo.length > 0) { s += `${j}. ${foo.shift() + ' ' + foo.shift()} `; i += 2; j += 1 }; clog(s.replaceAll(/([A-Z]?)([a-h][0-8])(x?[a-h][0-8])/g, '$1$3'));
-						//debugger // King can't even be next to enemy king!
-
+						// Happens in deep thought.
+						//const foo = [...board.log]; let i = 1; let j = 0; let s = ''; while (foo.length > 0) { s += `${j}. ${foo.shift() + ' ' + foo.shift()} `; i += 2; j += 1 }; clog(s); //.replaceAll(/([A-Z]?)([a-h][0-8])(x?[a-h][0-8])/g, '$1$3'));
 						safe_moves.push(move)
 					} else {
 						let new_board = board.copy()
@@ -370,7 +369,7 @@
 				let move = board.log.pop()
 				const y = this.y
 				const rank = 8 - y
-				if (move === `Ke${rank}g${rank}`) { // TODO? Only 5171 according to https://en.wikipedia.org/wiki/ICCF_numeric_notation
+				if (move === `Ke${rank}g${rank}`) {
 					move = '0-0'
 					if (do_log) say("Castle.")
 					board.grid[y][7].move('f' + rank)
@@ -429,15 +428,19 @@
 
 			move(fr, do_log) {
 				super.move(fr, do_log)
-				if (this.color === BLACK && this.y === 7
-					|| this.color === WHITE && this.y === 0) {
+				const log = this.board.log
+				if ((this.y === 0 && this.color === WHITE)
+					|| (this.y === 7 && this.color === BLACK)) {
 					this.board.promote(fr, 'Q', this.color)
+					if (do_log) {
+						log[log.length - 1] += 'Q'
+						say("Promotion.")
+					}
 				}
 				// En passant.
 				if (this.color === BLACK && this.y != 5) return
 				if (this.color === WHITE && this.y != 2) return
 				const double_jump = xy2fr(this.x, this.color ? 6 : 1) + xy2fr(this.x, this.color ? 4 : 3)
-				const log = this.board.log
 				if (log.slice(-2)[0].slice(0, 4) === double_jump) {
 					this.board.grid[this.y + (this.color ? -1 : 1)][this.x] = ' '
 					log[log.length - 1] += ' e.p.'
@@ -520,9 +523,11 @@
 			}
 
 			fen_import(fen) {
-				// e.g. "rnbqkbnr/pppppppp/8/8/8/8/PPPPPPPP/RNBQKBNR w KQkq - 0 1"
+				// e.g. "2b5/2p5/4p3/4r1kp/8/5K2/r2q4/8 b KQkq - 0 20"
 				let [ppd, active_color, castling_availability, ep_target, halfmove_clock, fullmove_number] = fen.split(' ')
 				this.grid = []
+				this.log = []
+				this.captured = []
 				for (let i = 0; i < 8; ++i) this.grid.push([' ', ' ', ' ', ' ', ' ', ' ', ' ', ' '])
 				let row = 0
 				let col = 0
@@ -530,30 +535,29 @@
 					for (let char of line) {
 						let piece = ' '
 						switch (char) {
-							case 'r': piece = new Rook(row, col, BLACK); break
-							case 'n': piece = new Knight(row, col, BLACK); break
-							case 'b': piece = new Bishop(row, col, BLACK); break
-							case 'q': piece = new Queen(row, col, BLACK); break
-							case 'k': piece = new King(row, col, BLACK); break
-							case 'p': piece = new Pawn(row, col, BLACK); break
+							case 'r': piece = new Rook(col, row, BLACK); break
+							case 'n': piece = new Knight(col, row, BLACK); break
+							case 'b': piece = new Bishop(col, row, BLACK); break
+							case 'q': piece = new Queen(col, row, BLACK); break
+							case 'k': piece = new King(col, row, BLACK); break
+							case 'p': piece = new Pawn(col, row, BLACK); break
 
-							case 'R': piece = new Rook(row, col); break
-							case 'N': piece = new Knight(row, col); break
-							case 'B': piece = new Bishop(row, col); break
-							case 'Q': piece = new Queen(row, col); break
-							case 'K': piece = new King(row, col); break
-							case 'P': piece = new Pawn(row, col); break
+							case 'R': piece = new Rook(col, row); break
+							case 'N': piece = new Knight(col, row); break
+							case 'B': piece = new Bishop(col, row); break
+							case 'Q': piece = new Queen(col, row); break
+							case 'K': piece = new King(col, row); break
+							case 'P': piece = new Pawn(col, row); break
 							default:
 								col += parseInt(char) - 1
 						}
-						console.log(`${char}; Setting ${row},${col} to ${piece}`)
 						this.grid[row][col] = piece
 						++col
 					}
 					col = 0
 					++row
 				}
-				for (let i = 1; i <= parseInt(fullmove_number) * 2; ++i) this.log.push('?')
+				for (let i = 1; i <= parseInt(fullmove_number - 1) * 2 + (active_color === 'b' ? 1 : 0); ++i) this.log.push('?')
 				if (ep_target !== '-') {
 					let [file, rank] = ep_target
 					if (rank === '4') this.log[this.log.length - 1] = `${file}3${file}5`
@@ -665,11 +669,11 @@
 		}
 
 
-		function xy2fr(x, y) {
+		window.xy2fr = function xy2fr(x, y) {
 			return "abcdefgh"[x] + (8 - y)
 		}
 
-		function fr2xy(fr) {
+		window.fr2xy = function fr2xy(fr) {
 			return ["abcdefgh".indexOf(fr[0]), 8 - parseInt(fr[1])]
 		}
 
@@ -763,8 +767,15 @@
 					}
 					window.start_fr = this.id
 					this.classList.add('selected')
-					const moves = piece.get_moves() // TODO: Limit if in check.
+					const moves = piece.get_moves()
 					for (let move of moves) {
+						// Limit if in check.
+						let new_board = board.copy()
+						let new_piece = new_board.grid[piece.y][piece.x]
+						let fr = xy2fr(...move)
+						new_piece.move(fr)
+						if (new_board.is_check(piece.color)) continue
+
 						let square = document.getElementById(xy2fr(...move))
 						square.classList.add('selected')
 						if (!guides.checked) square.classList.add('nobg')
@@ -783,7 +794,8 @@
 
 		window.ai_move = async function ai_move(board_in, depth, color) {
 			if (typeof depth === "undefined") depth = 0
-			else if (depth > ai_level.value - 1) return
+			else if (depth >= ai_level.value) return
+
 			var start_time = performance.now()
 			let my_board = board
 			if (typeof board_in !== "undefined") my_board = board_in
@@ -795,7 +807,7 @@
 			let best_score = 9999
 			let best_move = null
 			let best_piece = null
-			let max_think = Math.min(128, total_moves * 2)
+			let max_think = 100 // Embarrasing moves: Math.min(128, total_moves * 3)
 			//if (depth > 1) max_think = 2
 			for (let i = 0; i < max_think; ++i) {
 				if (pieces.length < 1) break
@@ -806,7 +818,7 @@
 				const new_piece = new_board.grid[piece.y][piece.x]
 				const capture = new_board.grid[move[1]][move[0]]
 				if (capture.char === "K") {
-					clog("K")
+					clog("Capturing king.")
 					say("You are already dead.")
 					best_move = move
 					best_piece = piece
@@ -825,7 +837,7 @@
 				// }
 				// Set response.
 				const enemy_move = await ai_move(new_board, depth + 1, 1 - color)
-				if (enemy_move) {
+				if (enemy_move || depth === ai_level.value - 1) {
 					const my_score = new_board.get_pieces(color).reduce((sum, el) => sum + el.value, 0)
 					const enemy_score = new_board.get_pieces(1 - color).reduce((sum, el) => sum + el.value, 0)
 					const score = enemy_score - my_score
@@ -838,9 +850,11 @@
 						best_piece = piece
 					}
 				} else {
+					// Draw or better!
+					best_score = -9999
 					best_move = move
 					best_piece = piece
-					break
+					if (new_board.is_mate(1 - color)) break
 				}
 			}
 			if (depth > 0) {
@@ -853,8 +867,8 @@
 					clearInterval(timer)
 					render(my_board)
 				}
+				clog(`Level ${ai_level.value} max_think ${max_think} took ${ms2time(performance.now() - start_time)} at ${new Date()}`)
 			}
-			if (depth < 1) clog(`Level ${ai_level.value} max_think ${max_think} took ${ms2time(performance.now() - start_time)} at ${new Date()}`)
 			return best_move
 		}
 
@@ -863,6 +877,7 @@
 		import sleep from './lib/sleep.mjs'
 		import say_it from './lib/say.mjs'
 		window.say = function say(msg) {
+			console.log(msg)
 			if (speak.checked) say_it(msg, WINDOWS ? 1.9 : 1, 1, "en-UK")
 		}
 
@@ -902,7 +917,7 @@
 
 			if (board.log[board.log.length - 1].indexOf('#') > -1) return
 			const max_moves = 75
-			if (board.log.length > max_moves && !board.log.slice(-max_moves).some(s => s.indexOf('x') > -1 || s.match(/^[a-h]/) > -1)) {
+			if (board.log.length > max_moves && !board.log.slice(-max_moves).some(s => s.indexOf('x') > -1 || s.match(/^[a-h]/))) {
 				const msg = `${max_moves} moves without checkmate, capture, or pawn move. Draw.`
 				clog(msg)
 				say(msg)
@@ -924,7 +939,7 @@
 			alertcontainer.style.visibility = 'hidden'
 			board.promote(fr, kind, color)
 			say('Promote to ' + board.fr2p(fr).name)
-			board.log_check(board.log.pop() + kind, 1 - color)
+			board.log_check(board.log.pop().slice(0, -1) + kind, 1 - color)
 			render(board)
 		}
 
